--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@ layout: default
 title: test
 ---
 
-<script type="text/plain" data-cookiefirst-category="necessary">  
- document.write('<script src="http://localhost:8080/cookies-js/necessary.js">');</script>
+<script type="text/plain" data-cookiefirst-category="necessary">
+
+$(document).ready(function(){
+    $('body').append($('<script src="http://localhost:8080/cookies-js/necessary.js"></script>'));
+});
+
+ //document.write('<script src="http://localhost:8080/cookies-js/necessary.js">');
+
+</script>
+
+
 <script type="text/plain" data-cookiefirst-category="functional">
- document.write('<script src="http://localhost:8080/cookies-js/functional.js">');</script>
+ // document.write('<script src="http://localhost:8080/cookies-js/functional.js">');
+</script>
+
+
 <script type="text/plain" data-cookiefirst-category="performance">
- document.write('<script src="http://localhost:8080/cookies-js/performance.js">');</script>
+ // document.write('<script src="http://localhost:8080/cookies-js/performance.js">');
+</script>
+
+
 <script type="text/plain" data-cookiefirst-category="advertising">
- document.write('<script src="http://localhost:8080/cookies-js/advertising.js">');</script>
+ // document.write('<script src="http://localhost:8080/cookies-js/advertising.js">');
+</script>
