--- a/index.html
+++ b/index.html
@@ -4,26 +4,22 @@ title: test
 ---
 
 <script type="text/plain" data-cookiefirst-category="necessary">
-
 $(document).ready(function(){
-    $('body').append($('<script src="http://localhost:8080/cookies-js/necessary.js"></script>'));
+    $('body').append($('<script src="/cookies-js/necessary.js"></script>'));
 });
-
- //document.write('<script src="http://localhost:8080/cookies-js/necessary.js">');
-
 </script>
-
-
 <script type="text/plain" data-cookiefirst-category="functional">
- // document.write('<script src="http://localhost:8080/cookies-js/functional.js">');
+$(document).ready(function(){
+    $('body').append($('<script src="/cookies-js/functional.js"></script>'));
+});
 </script>
-
-
 <script type="text/plain" data-cookiefirst-category="performance">
- // document.write('<script src="http://localhost:8080/cookies-js/performance.js">');
+$(document).ready(function(){
+    $('body').append($('<script src="/cookies-js/performance.js"></script>'));
+});
 </script>
-
-
 <script type="text/plain" data-cookiefirst-category="advertising">
- // document.write('<script src="http://localhost:8080/cookies-js/advertising.js">');
+$(document).ready(function(){
+    $('body').append($('<script src="/cookies-js/advertising.js"></script>'));
+});
 </script>
