--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ title: test
 <script type="text/plain" data-cookiefirst-category="necessary">
 $(document).ready(function(){
     $('body').append($('<script src="./cookies-js/necessary.js"><//script>'));
-</script>
+});</script>
 <script type="text/plain" data-cookiefirst-category="functional">
 $(document).ready(function(){
     $('body').append($('<script src="./cookies-js/functional.js"><//script>'));
-</script>
+});</script>
 <script type="text/plain" data-cookiefirst-category="performance">
 $(document).ready(function(){
     $('body').append($('<script src="./cookies-js/performance.js"><//script>'));
-</script>
+});</script>
 <script type="text/plain" data-cookiefirst-category="advertising">
 $(document).ready(function(){
     $('body').append($('<script src="./cookies-js/advertising.js"><//script>'));
-</script>
+});</script>
