--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: test
 
 <script type="text/plain" data-cookiefirst-category="necessary">
 $(document).ready(function(){
-    $('body').append($('<script src="./cookies-js/necessary.js"><//script>'));
+    $('body').append($('<script src="/cookies-js/necessary.js"><//script>'));
 });</script>
 <script type="text/plain" data-cookiefirst-category="functional">
 $(document).ready(function(){
@@ -13,9 +13,9 @@ $(document).ready(function(){
 });</script>
 <script type="text/plain" data-cookiefirst-category="performance">
 $(document).ready(function(){
-    $('body').append($('<script src="./cookies-js/performance.js"><//script>'));
+    $('body').append($('<script src="cookies-js/performance.js"><//script>'));
 });</script>
 <script type="text/plain" data-cookiefirst-category="advertising">
 $(document).ready(function(){
-    $('body').append($('<script src="./cookies-js/advertising.js"><//script>'));
+    $('body').append($('<script src="cookies-js/advertising.js"><//script>'));
 });</script>
