--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 layout: default
 title: test
 ---
+<p id="ccnecessary">Hello World!</p>
+<p id="ccfunctional">Hello World!</p>
+<p id="ccperformance">Hello World!</p>
+<p id="ccadvertising">Hello World!</p>
+
 
 <script type="text/plain" data-cookiefirst-category="necessary">
- document.write('<script src="https://www.pc-tests.ga/cookies-js/necessary.js"><\/script>');
+ document.getElementById("ccnecessary").innerHTML = '<script src="https://www.pc-tests.ga/cookies-js/necessary.js"><\/script>';
 </script>
 <script type="text/plain" data-cookiefirst-category="functional">
 document.write('<script src="https://www.pc-tests.ga/cookies-js/functional.js"><\/script>');
