--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ title: test
  document.getElementById("ccnecessary").innerHTML = '<script src="https://www.pc-tests.ga/cookies-js/necessary.js"><\/script>';
 </script>
 <script type="text/plain" data-cookiefirst-category="functional">
-document.write('<script src="https://www.pc-tests.ga/cookies-js/functional.js"><\/script>');
+document.getElementById("ccfunctional").innerHTML = '<script src="https://www.pc-tests.ga/cookies-js/functional.js"><\/script>';
 </script>
 <script type="text/plain" data-cookiefirst-category="performance">
-document.write('<script src="https://www.pc-tests.ga/cookies-js/performance.js"><\/script>');
+document.getElementById("ccperformance").innerHTML = '<script src="https://www.pc-tests.ga/cookies-js/performance.js"><\/script>';
 </script>
 <script type="text/plain" data-cookiefirst-category="advertising">
-document.write('<script src="https://www.pc-tests.ga/cookies-js/advertising.js"><\/script>');
+document.getElementById("ccadvertising").innerHTML = '<script src="https://www.pc-tests.ga/cookies-js/advertising.js"><\/script>';
 ;</script>
